[package]
name = "rusty-gatekeeper"
version = "0.1.0"
edition = "2018"


[dependencies]
kube = "0.55.0"
kube-runtime = "0.55.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
log = "0.4.11"
env_logger = "0.8.2"
tokio = { version = "1.1.0", features = ["full"] }
tokio-util = "0.6.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
actix-web = "4.0.0-beta.6"
thiserror = "1.0"
askama = "0.10.5"
async-trait = "0.1.50"


[build-dependencies]
askama = "0.10.5"